template literals with string interpolation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="fruits"></div>
 
       <h3>Vegetables</h3>
+      <h3>*-using template literal string-*</h3>
       <div class="vegetables"></div>
     </div>
 
